[package]
name = "gooey-canvas"
version = "0.1.0"
edition = "2018"

[[example]]
name = "basic"
test = true

[features]
default = ["frontend-kludgine", "frontend-browser"]
frontend-kludgine = ["gooey/frontend-kludgine"]
frontend-browser = [
    "gooey/frontend-browser",
    "wasm-bindgen",
    "web-sys",
    "flume",
    "js-sys",
]

[dependencies]
gooey = { git="https://github.com/khonsulabs/gooey.git", branch="main" }
wasm-bindgen = { version="0.2", optional=true }
web-sys = { version="0.3", optional=true, features=[
    "HtmlElement",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "CanvasRenderingContext2d",
    "TextMetrics",
] }
js-sys = { version="0.3", optional=true }
flume = { version="0.10", optional=true }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version="1", features=["full"] }
anyhow = "1"
image = { version="0.23", default-features=false, features=["ico", "png", "jpeg"] }
